tests/samples/positive/pattern_matching/slice_dynamic_length_exhaustive.ax
module slice_dynamic_length_exhaustive;

fn first_or_empty(values: []i32) -> i32 {
    return match values {
        [] => 0,
        [head, ..] => head,
    };
}

fn bool_head_score(values: []bool) -> i32 {
    return match values {
        [] => 0,
        [true, ..] => 1,
        [false, ..] => 2,
    };
}

fn main() -> i32 {
    let numbers: [2]i32 = [7, 8];
    let flags: [2]bool = [true, false];
    return first_or_empty(numbers[:]) + bool_head_score(flags[:]) - 8;
}
